--- a/flv/flv.css
+++ b/flv/flv.css
@@ -1,13 +1,13 @@
 .mainContainer {
-    display: block;
+    display: inline-block;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
-@media screen and (min-width: 1152px) {
+@media screen and (min-width: 600px) {
     .mainContainer {
-        display: block;
-        width: 1152px;
+        display: inline-block;
+        width: 600px;
         margin-left: auto;
         margin-right: auto;
     }
